--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">KudiPAD</string>
+
+    <string name="shopid_not_empty">店号不能为空</string>
+    <string name="ip_not_empty">IP不能为空</string>
+    <string name="port_not_empty">端口号不能为空</string>
+    <string name="code_not_empty">收据单号不能为空</string>
 </resources>
